--- a/src/main/resources/templates/user/view-contacts.html
+++ b/src/main/resources/templates/user/view-contacts.html
@@ -82,7 +82,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             <!-- You can customize the card content based on your Contact entity -->
             <div class="card-content">
             
-            <img th:src="@{'/img/' + ${contact.image}}" alt="profile photo"/>
+            <img th:src="@{'/img/' + ${contact.image}}" class="profile_image" alt="profile photo"/>
             <h3 th:text="${contact.name}"></h3>
             
             <div class="contact-info">
@@ -91,7 +91,12 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             
             <label for="image">PHONE : </label><i th:text="${contact.phone}"></i><br>
             <label for="image">WORK : </label><i th:text="${contact.work}"></i><br>
-            <label for="image">DESCRIPTION : </label><i th:text="${contact.description}"></i><br>
+            <!--  <label for="image">DESCRIPTION : </label><i th:text="${contact.description}"></i><br>-->
+            
+            <div th:if="${#strings.length(contact.description) > 50}">
+        		<label for="image">DESCRIPTION : </label><i th:text="${#strings.substring(contact.description, 0, 120)}"></i>
+        		<a th:href="@{/user/details/{id}(id=${contact.cid})}">Read More</a>
+    		</div>
             <button><i class="fa-solid fa-pen"></i>	UPDATE</button>
            <button><i class="fa-solid fa-delete-left"></i>	DELETE</button>
             </div>
