--- a/src/main/resources/templates/admin/view-contacts.html
+++ b/src/main/resources/templates/admin/view-contacts.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>See Contacts here</title>
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <link rel="stylesheet" 
 href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 <link href="../static/css/style.css" th:href="@{/css/style.css}" rel="stylesheet">
@@ -80,8 +80,9 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         		<a th:href="@{/admin/details/{id}(id=${contact.cid})}">Read More</a>
     		</div>
            
-           <button><i class="fa-solid fa-delete-left"></i>	DELETE</button>
-           <button><i class="fa-solid fa-pen"></i>	UPDATE</button>
+            <a><button><i class="fa-solid fa-pen"></i>	UPDATE</button> </a>
+            <a th:onclick="'deleteContact(' + ${contact.cid} + ');'"><button><i class="fa-solid fa-delete-left"></i>	DELETE</button></a>
+          
             </div>
             
             </div>
