--- a/src/main/resources/templates/user/view-contacts.html
+++ b/src/main/resources/templates/user/view-contacts.html
@@ -106,7 +106,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         		<label for="image">DESCRIPTION : </label><i th:text="${#strings.substring(contact.description, 0, 120)}"></i>
         		<a th:href="@{/user/details/{id}(id=${contact.cid})}">Read More</a>
     		</div>
-            <button><i class="fa-solid fa-pen"></i>	UPDATE</button>
+            <a> <button><i class="fa-solid fa-pen"></i>	UPDATE</button></a>
            <a th:onclick="'deleteContact(' + ${contact.cid} + ');'"><button> <i class="fa-solid fa-delete-left"></i>	DELETE</button></a>
             </div>
             
