--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -16,7 +16,7 @@ body {
 	/* box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);*/
 }
 
-form {
+.container form {
 	background-color: #fff;
 	padding: 20px;
 	border-radius: 8px;
