--- a/src/main/resources/templates/admin/add_contacts_admin.html
+++ b/src/main/resources/templates/admin/add_contacts_admin.html
@@ -43,7 +43,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     <span class="close-btn" onclick="toggleSidebar()">×</span>
     <a href="#" th:href="@{/admin/dashboard}" class="item"><i class="fa-solid fa-house"></i> HOME </a>
     <a href="#" th:href="@{/admin/view-contacts/0}" class="item"> <i class="fa-solid fa-address-book"></i> VIEW CONTACTS </a>
-    <a href="#" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
+    <a href="#" th:href="@{/admin/add-contacts}" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
     <a href="#" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
     <a href="#" class="item"><i class="fa-solid fa-gear"></i> SETTINGS </a>
     </div>
@@ -70,35 +70,69 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     	</div>   
 		
 		
-        <form th:action="@{/admin/process-contact}" method="post" th:object="${contact}" enctype="multipart/form-data">
+        <form th:action="${addContact ? '/admin/process-contact' : '/admin/process-update/' + contact.cid}" method="get" th:object="${contact}" enctype="multipart/form-data">
 
             <label for="name">NAME</label>
-            <input type="text" id="name" name="name" placeholder="enter your name" required><br>
+            <input th:value="${contact.name}" type="text" id="name" name="name" placeholder="enter your name" required><br>
 
             <label for="phone">PHONE</label>
-           <input type="number" id="phone" name="phone" placeholder="enter your phone number" required><br>
+           <input type="number" th:value="${contact.phone}" id="phone" name="phone" placeholder="enter your phone number" required><br>
 
 
             <label for="nickname">NICKNAME</label>
-            <input type="text" id="nickname" name="nickName" placeholder="enter your nickname" required><br>
+            <input th:value="${contact.nickName}" type="text" id="nickname" name="nickName" placeholder="enter your nickname" required><br>
 
             <label for="work">WORK</label>
-            <input type="text" id="work" name="work" placeholder="enter your work" required><br>
+            <input th:value="${contact.work}" type="text" id="work" name="work" placeholder="enter your work" required><br>
 
             <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email" placeholder="enter your email" required><br> <br>
+            <input th:value="${contact.email}" type="email" id="email" name="email" placeholder="enter your email" required><br> <br>
             
             <label for="description">DESCRIPTION</label>
-            <textarea id="description" name="description" rows="15" cols="50" placeholder="enter your description" required></textarea><br>
+            <textarea th:text="${contact.description}" id="description" name="description" rows="15" cols="50" placeholder="enter your description" required></textarea><br>
 				
              <label for="image">IMAGE</label>
             <input type="file" id="image" name="imageFile"><br>
+
+            <input type="submit" th:value="${addContact ? 'ADD CONTACT' : 'UPDATE CONTACT'}">
+    
+            <input type="reset" value="RESET">
+
+			
+        </form>
+        
+     <!--     <form th:action="@{/admin/process-update}" method="post" th:object="${contacts}" enctype="multipart/form-data">
+
+            <label for="name">NAME</label>
+            <input type="text" id="nameUpdate" name="name" placeholder="enter your name" required><br>
+
+            <label for="phone">PHONE</label>
+           <input type="number" id="phoneUpdate" name="phone" placeholder="enter your phone number" required><br>
+
+
+            <label for="nickname">NICKNAME</label>
+            <input type="text" id="nicknameUpdate" name="nickName" placeholder="enter your nickname" required><br>
+
+            <label for="work">WORK</label>
+            <input type="text" id="workUpdate" name="work" placeholder="enter your work" required><br>
+
+            <label for="email">EMAIL</label>
+            <input type="email" id="emailUpdate" name="email" placeholder="enter your email" required><br> <br>
+            
+            <label for="description">DESCRIPTION</label>
+            <textarea id="descriptionUpdate" name="description" rows="15" cols="50" placeholder="enter your description" required></textarea><br>
+				
+             <label for="image">IMAGE</label>
+            <input type="file" id="imageUpdate" name="imageFile"><br>
 
             <input type="submit" value="ADD CONTACT">
             <input type="reset" value="RESET">
 
 			
-        </form>
+        </form>-->
+        
+        
+        
     </div>
 	
 	
