--- a/src/main/resources/templates/user/add_contacts_user.html
+++ b/src/main/resources/templates/user/add_contacts_user.html
@@ -52,32 +52,32 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     	</div>   
 		
 		
-        <form th:action="@{/user/process-contact}" method="post" th:object="${contact}" enctype="multipart/form-data">
+        <form th:action="${addContact ? '/user/process-contact' : '/user/process-update/' + contact.cid}" method="get" th:object="${contact}" enctype="multipart/form-data">
 
             <label for="name">NAME</label>
-            <input type="text" id="name" name="name" placeholder="enter your name" required><br>
+            <input th:value="${contact.name}" type="text" id="name" name="name" placeholder="enter your name" required><br>
 
             <label for="phone">PHONE</label>
-           <input type="tel" id="phone" name="phone" placeholder="enter your phone number" required><br>
+           <input th:value="${contact.phone}" type="tel" id="phone" name="phone" placeholder="enter your phone number" required><br>
 
 
             <label for="nickname">NICKNAME</label>
-            <input type="text" id="nickname" name="nickname" placeholder="enter your nickname" required><br>
+            <input th:value="${contact.nickName}" type="text" id="nickname" name="nickname" placeholder="enter your nickname" required><br>
 
             <label for="work">WORK</label>
-            <input type="text" id="work" name="work" placeholder="enter your work" required><br>
+            <input th:value="${contact.work}" type="text" id="work" name="work" placeholder="enter your work" required><br>
 
             <label for="email">EMAIL</label>
-            <input type="email" id="email" name="email" placeholder="enter your email" required><br>
+            <input th:value="${contact.email}" type="email" id="email" name="email" placeholder="enter your email" required><br>
             
             <label for="description">DESCRIPTION</label>
-            <textarea id="description" name="description" rows="8" cols="50" placeholder="enter your description" required></textarea><br>
+            <textarea th:text="${contact.description}" id="description" name="description" rows="8" cols="50" placeholder="enter your description" required></textarea><br>
 
              <label for="image">IMAGE</label>
             <input type="file" id="image" name="imageFile"><br>
 
-            <input type="submit" value="ADD CONTACT">
-            <input type="reset" value="RESET">
+           <input type="submit" th:value="${addContact ? 'ADD CONTACT' : 'UPDATE CONTACT'}">
+    		<input type="reset" value="RESET">
 
         </form>
     </div>
