--- a/src/main/resources/templates/user/view-contacts.html
+++ b/src/main/resources/templates/user/view-contacts.html
@@ -114,8 +114,14 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     			 
 			</div>
 			 
-            <a class="deleteContact"> <button style="cursor: pointer"><i class="fa-solid fa-pen"></i>	UPDATE</button></a>
-           <a class="deleteContact" th:onclick="'deleteContact(' + ${contact.cid} + ');'"><button style="cursor: pointer"> <i class="fa-solid fa-delete-left"></i>	DELETE</button></a>
+           
+         	<a th:unless="${addContact}" class="deleteContact" th:href="@{'/user/update-contact/' + ${contact.cid}}">
+    <button style="cursor: pointer">
+        <i class="fa-solid fa-pen"></i> UPDATE
+    </button>
+</a>
+
+  <a class="deleteContact" th:onclick="'deleteContact(' + ${contact.cid} + ');'"><button style="cursor: pointer"> <i class="fa-solid fa-delete-left"></i>	DELETE</button></a>
             </div>
             
             </div>
