update added at admin end

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -179,6 +179,11 @@ nav a:hover {
 	 cursor: pointer;
 }
 
+.container .imageContact {
+	height: 200px;
+	width: 100%;
+}
+
 @media only screen and (max-width: 600px) {
     .sidebar {
         padding-top: 15px;
