--- a/src/main/resources/templates/user/details.html
+++ b/src/main/resources/templates/user/details.html
@@ -43,11 +43,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
  
 	</div>
 
-<div class="container1">
+<div class="details-container1">
 
 <div class="card-content">
             <div th:each="contact : ${contacts}">
-            <img th:src="@{'/img/' + ${contact.image}}" alt="profile photo"/>
+            <img class="detailsImage" th:src="@{'/img/' + ${contact.image}}" alt="profile photo"/>
             <h3 th:text="${contact.name}"></h3>
             
             <div class="contact-info">
@@ -56,7 +56,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
             
             <label for="image">PHONE : </label><i th:text="${contact.phone}"></i><br>
             <label for="image">WORK : </label><i th:text="${contact.work}"></i><br>
-            <label for="image">DESCRIPTION : </label><i th:text="${contact.description}"></i><br>
+            <label for="image">DESCRIPTION : </label><br><i th:text="${contact.description}"></i><br>
 
     <!--  <h2>Contact Details</h2>
     <div th:each="contact : ${contacts}">
