--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -131,3 +131,37 @@
 	justify-content: center;
     align-items: center;
 }
+
+.card1 {
+	background-color: #EC8565;
+	font-weight: bold;
+	/*display: flex;*/
+	justify-content: center;
+	margin: 40px auto;
+	border: 1px solid #ddd;
+	text-align: center;
+	border-radius: 8px;
+	/*margin-right: 30px;
+	margin-top: 20px;*/
+	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+	overflow: hidden;
+	/* margin: 20px 0px;  Adjust margin as needed */
+	width: 900px;
+	height: 500px;
+	/*background-color: #fff;*/
+	transition: transform 0.3s ease-in-out;
+	z-index: 1;
+	position: relative;
+	
+}
+
+.card1 .contact-info {
+	
+	margin-top:20px;
+}
+
+.card1 img {
+	
+	height:250px;
+	width:600px;
+}
