--- a/src/main/resources/templates/admin/details.html
+++ b/src/main/resources/templates/admin/details.html
@@ -30,7 +30,7 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
     <a href="#" th:href="@{/admin/dashboard}" class="item"><i class="fa-solid fa-house"></i> HOME </a>
     <a href="#" th:href="@{/admin/view-contacts/0}" class="item"> <i class="fa-solid fa-address-book"></i> VIEW CONTACTS </a>
     <a href="#" th:href="@{/admin/add-contacts}" class="item"><i class="fa-solid fa-user-plus"></i> ADD CONTACTS </a>
-    <a href="#" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
+    <a href="#" th:href="@{/admin/profile}" class="item"><i class="fa-solid fa-user"></i> YOUR PROFILE </a>
     <a href="#" class="item"><i class="fa-solid fa-gear"></i> SETTINGS </a>
     </div>
     
@@ -43,11 +43,11 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
  
 	</div>
 
-<div class="container1">
+<div  class="details-container1">
 
 <div class="card-content">
             <div th:each="contact : ${contacts}">
-            <img th:src="@{'/img/' + ${contact.image}}" alt="profile photo"/>
+            <img class="detailsImage" th:src="@{'/img/' + ${contact.image}}" alt="profile photo"/>
             <h3 th:text="${contact.name}"></h3>
             
             <div class="contact-info">
