--- a/src/main/resources/templates/user/view-contacts.html
+++ b/src/main/resources/templates/user/view-contacts.html
@@ -77,6 +77,17 @@ href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
  
 	</div>
 
+
+			<div class="searchBar">
+			<form action="#" method="get">
+                <input type="text" name="search" placeholder="Search contacts...">
+                <div class="searchResult">
+                
+                <p>njasdnc</p>
+                	
+                </div>
+            </form>
+			</div>
 	
 	<div class="container1">
 			
