--- a/src/main/resources/static/css/style2.css
+++ b/src/main/resources/static/css/style2.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-wrap: wrap;
 	justify-content: space-evenly; /* Adjust as needed */
-	margin-top: 70px;
+	margin-top: 85px;
 }
 
 .container1 p {
@@ -12,6 +12,14 @@
 .container-wrapper {
 	display: flex;
 }
+
+/*h1 {
+	
+position:fixed;
+text-align: center;
+margin-top:50px;
+z-index:2;
+}*/
 
 /* Card styling */
 .card {
@@ -132,6 +140,44 @@
     align-items: center;
 }
 
+.container-wrapper .searchBar {
+	 position:fixed;
+	text-align: right; 
+	 z-index: 3;
+	margin-bottom: 30px; 
+	margin-top:55px;
+	   /*position: absolute;
+       top: 10px;*/
+        right: 20px;
+        width: 400px;
+        /*padding: 8px;*/
+       
+}
+
+.container-wrapper .searchBar input{
+	
+	z-index: 3;
+	 background-color: rgba(255, 255, 255, 0.5);
+	}
+	
+
+.container-wrapper .searchResult {
+	
+	position:absolute;
+	text-align:left;
+	z-index: 2;
+	/*background: #FFCC99;*/
+	width:400px;
+	height:150px;
+	overflow-y: auto;
+	padding:1px;
+	border:1px solid gray;
+	display:none;
+	background-color: rgba(255, 255, 255, 0.5);
+	
+}
+
+
 .card1 {
 	background-color: #EC8565;
 	font-weight: bold;
@@ -182,4 +228,19 @@
 	/*cursor: pointer;*/
     background-color:  #EF2632; /* Change to the desired hover background color */
     color: #000000; /* Change to the desired hover text color */
+}
+
+.searched-items a {
+	 color: black;      /* Set anchor text color to black */
+  font-weight: bold; /* Set anchor text to bold */
+  margin-right: 10px; /* Add right margin for spacing between anchors */
+  text-decoration: none;
+  font-style:italic;
+	
+}
+
+.searched-items a:hover {
+   background-color:  #EF2632;
+   width:100%;
+/* Change text color on hover */
 }
