sidebar highlighting added at admin side

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -170,6 +170,12 @@ nav a:hover {
     cursor: pointer;
 }
 
+.sidebar a.active {
+	
+	background-color: #EF2632; /* Set the desired background color for the active link */
+    color: white; 
+}
+
 .content {
     margin-left: 200px; /* Adjust to the width of the sidebar */
     padding: 50px 20px;
